Research Grants page

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,11 @@ wheels/
 .installed.cfg
 *.egg
 
+# Generated files
+ai-models/matched_grants.json
+public/matched_grants.json
+*.log
+
 # Misc
 .DS_Store
 Thumbs.db 
